fixed the overflow of main in mobile screen

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -20,7 +20,6 @@
   &__react {
     content: url("../../assets/react.png");
     height: 15vh;
-    min-width: 10vh;
   }
   &__sass {
     content: url("../../assets/sass.png");
@@ -29,7 +28,6 @@
   &__nodejs {
     content: url("../../assets/nodejs.png");
     height: 15vh;
-    min-width: 5%;
   }
   &__express {
     content: url("../../assets/download.png");
