--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -44,19 +44,20 @@
     content: url("../../assets/mydoctorimage.png");
     height: 30vh;
 
-    min-width: 100%;
+    width: 100%;
   }
 
   &__image2 {
     content: url("../../assets/brainflimage.png");
     height: 30vh;
-    min-width: 100%;
+
+    width: 100%;
   }
 
   &__image3 {
     content: url("../../assets/bandsiteimage.png");
     height: 30vh;
-    min-width: 100%;
+    width: 100%;
   }
 
   &__subheading {
